# CaseManagement

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .pylintrc  API_DOCUMENTATION.md  Dockerfile  README.md  appspec.yml  compose.yaml  db.sql  docker-compose.yml  example.py  initialize_data.py  mydatabase.db  pylint-report.txt  pylintrc  pyproject.toml  requirements.txt  runServer.sh  sql_app.db  start.sh  test-api.html  test.db
.github/workflows/: aws-deploy.yml  backend-ci.yml  cd.yml  ci-pipeline.yml  ci.yml  docker-action.yml  docker-build-test.yml  docker-ci.yml  docker.yml  pylint-action.yml  pylint-report.txt  pylint.yml
.history/.github/workflows/: pylint_20241123200343.yml
.history/app/: database_20241123192530.py
.history/app/clients/: schema_20241123193030.py  schema_20241123193200.py
.lh/: .gitignore.json  runServer.sh.json
.lh/.github/workflows/: pylint.yml.json
.lh/app/: .env.json  database.py.json
.lh/app/clients/: database.py.json  env.py.json  router.py.json  schema.py.json
app/: .coverage  .env  .pylintrc  __init__.py  config.py  database.py  databse.py  exceptions.py  main.py  models.py  requirements.txt
app/api/: api.py
app/auth/: router.py  schemas.py  service.py
app/clients/: .env  crud.py  db_setup.py  mapper.py  router.py  schema.py  util.py
app/clients/api/: router.py
app/clients/repository/: case_repository.py  (+1 more)
app/config/: .env.example  settings.py
app/core/: model_manager.py  repository.py
app/crud/: candidate_crud.py  detailed_info_crud.py  user_crud.py
app/database/: database.py
app/ml/: model.py  model_manager.py
app/ml_models/: base_model.py  decision_tree_model.py  logistic_model.py  model_manager.py  random_forest_model.py  router.py
app/models/: __init__.py  case.py  client.py  client_case.py  ml_models.py  model.py  router.py  user.py
app/routers/: model_router.py
app/schema/: schema.py
scripts/: deploy.sh  install_dependencies.sh  start_server.sh
tests/: conftest.py  test.py  test_clients.py  test_create_client.py  test_delete_client.py  test_example.py  test_ml_models.py  test_model_switching.py  test_retrieve_client.py  test_update_client.py
tests/api/: test_api.py
tests/crud/: conftest.py  test_candidate_crud.py  test_detailed_info_crud.py  test_user_crud.py
(+23 files in other folders)
