[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "case-management"
version = "0.1.0"
description = "Case Management System for Social Workers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Team TicTech" }
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.21",
    "pydantic>=2.4.2",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.0",
    "pytest>=7.2.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "pylint>=3.0.1",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pylint.messages.control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing" 